Removing Testimonials section from Index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     {% include timeline_area.html %}
     {% include blog_and_items.html %}
     {% include team_area.html %}
-    {% include testimonials.html %}
+    <!-- {% include testimonials.html %} -->
     {% include call_to_action.html %}
     {% include support_area.html %}
     {% include footer_top_area.html %}
