--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -22,7 +22,7 @@ keywords: "responsive,jekyll,minimal template"
          <div class="blog-wrapper section-spacing">
             <div class="container">
                   <div class="error-page text-center">
-                      <img src="images/challenges.png" alt="Coming Soon">
+                      <img src="/assets/images/challenges.png" alt="Coming Soon">
                       <p><a href="{{ "/" | relative_url }}" class="btn-style2 btn btn-primary">Back to Home</a></p>
                   </div>
             </div>
