--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -12,7 +12,8 @@ keywords: "responsive,jekyll,minimal template"
          <div class="page-title-wrapper section-spacing">
             <div class="page-title text-center white-text">
                <h1 class="heading-1">Challenges</h1>
-               <p>Challenges are a way for developers to learn fundamental and advanced skills by actually coding. You’ll modify incomplete code snippets that perform key XDC Network tasks such as creating basic payment transactions, smart contracts, and much more. For each challenge you complete, you’ll earn a Badge that can be sent to the wallet of your choosing. Show it off to friends, brag about your status on forums, or share your status as a Master XDC Network dev! </p>
+               <p>Challenges are a way for developers to learn fundamental and advanced skills by actually coding. You’ll modify incomplete code snippets that perform key XDC Network tasks such as creating basic payment transactions, smart contracts, and much more. </p>
+               <p>For each challenge you complete, you’ll earn a Badge that can be sent to the wallet of your choosing. Show it off to friends, brag about your status on forums, or share your status as a Master XDC Network dev!</p>
             </div>
          </div>
       </section>
