Updated meta data for page

--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-description: "Meta description for 404 page"
-keywords: "responsive,jekyll,minimal template"
+description: "Challenges Coming Soon"
+keywords: "XDC,XDC Network,Developer,Challenges"
 ---
 
  
