adding header and footer

--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -4,7 +4,8 @@ description: "Challenges Coming Soon"
 keywords: "XDC,XDC Network,Developer,Challenges"
 ---
 
- 
+{% include header.html %}
+{% include page_header.html %}
 
       <!-- Start Page Title Area -->
       <section class="page-title-area bg-cover1"
@@ -30,5 +31,6 @@ keywords: "XDC,XDC Network,Developer,Challenges"
          </div>
       </section>
       <!-- End Blog Area -->
+{% include footer.html %}
 	  
  
