Removed text and changed image to challenges page

--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -22,9 +22,7 @@ keywords: "XDC,XDC Network,Developer,Challenges"
          <div class="blog-wrapper section-spacing">
             <div class="container">
                   <div class="error-page text-center">
-                      <p>Challenges are a way for developers to learn fundamental and advanced skills by actually coding. You’ll modify incomplete code snippets that perform key XDC Network tasks such as creating basic payment transactions, smart contracts, and much more. </p>
-                      <p>For each challenge you complete, you’ll earn a Badge that can be sent to the wallet of your choosing. Show it off to friends, brag about your status on forums, or share your status as a Master XDC Network dev!</p>
-                      <img src="/assets/images/challenges.png" alt="Coming Soon">
+                      <img src="/assets/images/coming-soon.jpg" alt="Coming Soon">
                       <p><a href="{{ "/" | relative_url }}" class="btn-style2 btn btn-primary">Back to Home</a></p>
                   </div>
             </div>
