Formatting of header

--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: Page
+title: Challenges
 description: "Challenges Coming Soon"
 keywords: "XDC,XDC Network,Developer,Challenges"
 ---
 
-{% include header.html %}
-{% include page_header.html %}
+
 
       <!-- Start Page Title Area -->
       <section class="page-title-area bg-cover1"
