Updated to add header

--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -5,7 +5,8 @@ description: "Challenges Coming Soon"
 keywords: "XDC,XDC Network,Developer,Challenges"
 ---
 
-
+{% include header.html %}
+{% include page_header.html %}
       <!-- Start Blog  Area -->
       <section class="blog-area bg-color1">
          <div class="blog-wrapper section-spacing">
