--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -1,12 +1,11 @@
 ---
-layout: Page
+layout: page
 title: Challenges
 description: "Challenges Coming Soon"
 keywords: "XDC,XDC Network,Developer,Challenges"
 ---
 
-{% include header.html %}
-{% include page_header.html %}
+
       <!-- Start Blog  Area -->
       <section class="blog-area bg-color1">
          <div class="blog-wrapper section-spacing">
