--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -1,23 +1,18 @@
 ---
 layout: page
 title: Challenges
-description: "Challenges Coming Soon"
-keywords: "XDC,XDC Network,Developer,Challenges"
+description: "Meta description for about page"
+keywords: "responsive,jekyll,minimal template"
 ---
 
+<!-- Start Changelog  Area -->
+<section class="changelog-area bg-color1">
+   <div class="changelog-wrapper inner-spacing">
+      <div class="container">
+         <div class="row">
 
-      <!-- Start Blog  Area -->
-      <section class="blog-area bg-color1">
-         <div class="blog-wrapper section-spacing">
-            <div class="container">
-                  <div class="error-page text-center">
-                      <img src="/assets/images/coming-soon.jpg" alt="Coming Soon">
-                      <p><a href="{{ "/" | relative_url }}" class="btn-style2 btn btn-primary">Back to Home</a></p>
-                  </div>
-            </div>
          </div>
-      </section>
-      <!-- End Blog Area -->
-{% include footer.html %}
-	  
- 
+      </div>
+   </div>
+</section>
+<!-- End Changelog Area -->
