--- a/pages/xips.html
+++ b/pages/xips.html
@@ -14,7 +14,29 @@ keywords: "responsive,jekyll,minimal template"
                 <p>XDC Network Improvement Proposals (XIPs) describe standards for the XDC platform, including core protocol specifications, client APIs, and contract standards.</p>
 
                 <h2>Contributing</h2>
-                <p>First review <a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-1.md">XIP-1</a>. Then clone the repository and add your EIP to it. There is a <a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-template.md">template XIP here</a>. Then submit a Pull Request to XDC Community's <a href="https://github.com/XDC-Community/XIPs.github.io">XIPs repository</a>.</p>
+                <p>First review <a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-1.md">XIP-1</a>. Then clone the repository and add your XIP to it. There is a <a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-template.md">template XIP here</a>. Then submit a Pull Request to XDC Community's <a href="https://github.com/XDC-Community/XIPs.github.io">XIPs repository</a>.</p>
+
+                <h2> XIP status terms</h2>
+                <ul>
+                  <li><strong>Idea</strong> - An idea that is pre-draft. This is not tracked within the XIP Repository.
+                  <li><strong>Draft</strong> - The first formally tracked stage of an XIP in development. An XIP is merged by an XIP Editor into the XIP repository when properly formatted.</li>
+                  <li><strong>Review</strong> - An XIP Author marks an XIP as ready for and requesting Peer Review.</li>
+                  <li><strong>Last Call</strong> - This is the final review window for an XIP before moving to FINAL. An XIP editor will assign Last Call status and set a review end date (`last-call-deadline`), typically 14 days later. If this period results in necessary normative changes it will revert the XIP to Review.</li>
+                  <li><strong>Final</strong> - This XIP represents the final standard. A Final XIP exists in a state of finality and should only be updated to correct errata and add non-normative clarifications.</li>
+                  <li><strong>Stagnant</strong> - Any XIP in Draft or Review if inactive for a period of 6 months or greater is moved to Stagnant. An XIP may be resurrected from this state by Authors or XIP Editors through moving it back to Draft.</li>
+                  <li><strong>Withdrawn</strong> - The XIP Author(s) have withdrawn the proposed XIP. This state has finality and can no longer be resurrected using this XIP number. If the idea is pursued at later date it is considered a new proposal.</li>
+                  <li><strong>Living</strong> - A special status for XIPs that are designed to be continually updated and not reach a state of finality. This includes most notably XIP-1.</li>
+                </ul>
+
+                <h2>XIP Types</h2>
+
+                <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
+
+                <h3>Standard Track</h3>
+                <p>Describes any change that affects most or all XDC Network implementations, such as a change to the network protocol, a change in block or transaction validity rules, proposed application standards/conventions, or any change or addition that affects the interoperability of applications using XDC. Furthermore Standard XIPs can be broken down into the following categories.</p>
+
+                <h4>Core</h4>
+                <p>Improvements requiring a consensus fork, as well as changes that are not necessarily consensus critical but may be relevant to “core dev” discussions (for example, masternode strategy changes).</p>
          </div>
       </div>
    </div>
