--- a/pages/xips.html
+++ b/pages/xips.html
@@ -5,7 +5,7 @@ description: "Meta description for about page"
 keywords: "responsive,jekyll,minimal template"
 ---
 
-<!-- Start Changelog  Area -->
+<!-- Start Area -->
 <section class="changelog-area bg-color1">
    <div class="changelog-wrapper inner-spacing">
       <div class="container">
@@ -29,7 +29,6 @@ keywords: "responsive,jekyll,minimal template"
                 </ul>
 
                 <h2>XIP Types</h2>
-
                 <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
 
                 <h3>Standard Track</h3>
@@ -37,8 +36,16 @@ keywords: "responsive,jekyll,minimal template"
 
                 <h4>Core</h4>
                 <p>Improvements requiring a consensus fork, as well as changes that are not necessarily consensus critical but may be relevant to “core dev” discussions (for example, masternode strategy changes).</p>
+
+                <h4>Networking</h4>
+                <p>Includes improvements around devp2p, as well as proposed improvements to network protocol specifications.</p>
+
+                <h4>Interface</h4>
+                <p>Includes improvements around client API/RPC specifications and standards, and also certain language-level standards like method names and contract ABIs. The label “interface” aligns with the interfaces repo and discussion should primarily occur in that repository before an XIP is submitted to the XIPs repository.</p>
+
+                
          </div>
       </div>
    </div>
 </section>
-<!-- End Changelog Area -->
+<!-- End Area -->
