--- a/pages/xips.html
+++ b/pages/xips.html
@@ -28,20 +28,22 @@ keywords: "responsive,jekyll,minimal template"
                   <li><strong>Living</strong> - A special status for XIPs that are designed to be continually updated and not reach a state of finality. This includes most notably XIP-1.</li>
                 </ul>
 
-                <h2>XIP Types</h2>
-                <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
+                <h2>XIP Types
+                </h2>
+                  <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
 
-                <h3>Standard Track</h3>
-                <p>Describes any change that affects most or all XDC Network implementations, such as a change to the network protocol, a change in block or transaction validity rules, proposed application standards/conventions, or any change or addition that affects the interoperability of applications using XDC. Furthermore Standard XIPs can be broken down into the following categories.</p>
+                <h3>Standard Track
+                </h3>
+                  <p>Describes any change that affects most or all XDC Network implementations, such as a change to the network protocol, a change in block or transaction validity rules, proposed application standards/conventions, or any change or addition that affects the interoperability of applications using XDC. Furthermore Standard XIPs can be broken down into the following categories.</p>
 
                 <h4>Core</h4>
-                <p>Improvements requiring a consensus fork, as well as changes that are not necessarily consensus critical but may be relevant to “core dev” discussions (for example, masternode strategy changes).</p>
+                  <p>Improvements requiring a consensus fork, as well as changes that are not necessarily consensus critical but may be relevant to “core dev” discussions (for example, masternode strategy changes).</p>
 
                 <h4>Networking</h4>
-                <p>Includes improvements around devp2p, as well as proposed improvements to network protocol specifications.</p>
+                  <p>Includes improvements around devp2p, as well as proposed improvements to network protocol specifications.</p>
 
                 <h4>Interface</h4>
-                <p>Includes improvements around client API/RPC specifications and standards, and also certain language-level standards like method names and contract ABIs. The label “interface” aligns with the interfaces repo and discussion should primarily occur in that repository before an XIP is submitted to the XIPs repository.</p>
+                  <p>Includes improvements around client API/RPC specifications and standards, and also certain language-level standards like method names and contract ABIs. The label “interface” aligns with the interfaces repo and discussion should primarily occur in that repository before an XIP is submitted to the XIPs repository.</p>
 
                 
          </div>
