--- a/pages/xips.html
+++ b/pages/xips.html
@@ -28,12 +28,10 @@ keywords: "responsive,jekyll,minimal template"
                   <li><strong>Living</strong> - A special status for XIPs that are designed to be continually updated and not reach a state of finality. This includes most notably XIP-1.</li>
                 </ul>
 
-                <h2>XIP Types
-                </h2>
+                <h2>XIP Types</h2>
                   <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
 
-                <h3>Standard Track
-                </h3>
+                <h3>Standard Track</h3>
                   <p>Describes any change that affects most or all XDC Network implementations, such as a change to the network protocol, a change in block or transaction validity rules, proposed application standards/conventions, or any change or addition that affects the interoperability of applications using XDC. Furthermore Standard XIPs can be broken down into the following categories.</p>
 
                 <h4>Core</h4>
@@ -44,6 +42,14 @@ keywords: "responsive,jekyll,minimal template"
 
                 <h4>Interface</h4>
                   <p>Includes improvements around client API/RPC specifications and standards, and also certain language-level standards like method names and contract ABIs. The label “interface” aligns with the interfaces repo and discussion should primarily occur in that repository before an XIP is submitted to the XIPs repository.</p>
+
+                <h4>XRC</h4>
+                <p>Application-level standards and conventions, including contract standards such as token standards, name registries, URI schemes, library/package formats, and wallet formats.</p>
+
+                <h3>Meta</h3>
+                <p>Describes a process surrounding the XDC Network or proposes a change to (or an event in) a process. Process XIPs are like Standards Track XIPs but apply to areas other than the XDPoS protocol itself. They may propose an implementation, but not to XDPoS's codebase; they often require community consensus; unlike Informational XIPs, they are more than recommendations, and users are typically not free to ignore them. Examples include procedures, guidelines, changes to the decision-making process, and changes to the tools or environment used in XDC Network development. Any meta-XIP is also considered a Process XIP.</p>
+
+                  
 
                 
          </div>
