--- a/pages/xips.html
+++ b/pages/xips.html
@@ -48,10 +48,10 @@ keywords: "responsive,jekyll,minimal template"
 
                 <h3>Meta</h3>
                 <p>Describes a process surrounding the XDC Network or proposes a change to (or an event in) a process. Process XIPs are like Standards Track XIPs but apply to areas other than the XDPoS protocol itself. They may propose an implementation, but not to XDPoS's codebase; they often require community consensus; unlike Informational XIPs, they are more than recommendations, and users are typically not free to ignore them. Examples include procedures, guidelines, changes to the decision-making process, and changes to the tools or environment used in XDC Network development. Any meta-XIP is also considered a Process XIP.</p>
-
-                  
-
                 
+                <h3>Informational</h3>
+                <p>Describes a XDC Network design issue, or provides general guidelines or information to the XDC community, but does not propose a new feature. Informational XIPs do not necessarily represent XDC community consensus or a recommendation, so users and implementers are free to ignore Informational XIPs or follow their advice.</p>
+
          </div>
       </div>
    </div>
