--- a/pages/xips.html
+++ b/pages/xips.html
@@ -14,7 +14,7 @@ keywords: "responsive,jekyll,minimal template"
                 <p>XDC Network Improvement Proposals (XIPs) describe standards for the XDC platform, including core protocol specifications, client APIs, and contract standards.</p>
 
                 <h2>Contributing</h2>
-                <p>First review <strong><a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-1.md">XIP-1</a></strong>. Then clone the repository and add your XIP to it. There is a <strong><a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-template.md">template XIP here</a></strong>. Then submit a Pull Request to XDC Community's <a href="https://github.com/XDC-Community/XIPs.github.io">XIPs repository</a>.</p>
+                <p>First review <strong><a href="https://xips.xdc.community/">XIP-1</a></strong>. Then clone the repository and add your XIP to it. There is a <strong><a href="https://github.com/XDC-Community/XIPs.github.io/blob/main/XIPS/xip-template.md">template XIP here</a></strong>. Then submit a Pull Request to XDC Community's <a href="https://github.com/XDC-Community/XIPs.github.io">XIPs repository</a>.</p>
 
                 <h2> XIP status terms</h2>
                 <ul>
