--- a/pages/xips.html
+++ b/pages/xips.html
@@ -28,6 +28,10 @@ keywords: "responsive,jekyll,minimal template"
                   <li><strong>Living</strong> - A special status for XIPs that are designed to be continually updated and not reach a state of finality. This includes most notably XIP-1.</li>
                 </ul>
 
+                <h2>XIP Types</h2>
+                <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
+                
+
                 <h3>XIP Types</h3>
                 <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
 
