--- a/pages/xips.html
+++ b/pages/xips.html
@@ -9,7 +9,6 @@ keywords: "responsive,jekyll,minimal template"
 <section class="changelog-area bg-color1">
    <div class="changelog-wrapper inner-spacing">
       <div class="container">
-         <div class="row">
             <h1>XIPs</h1>
                 <p>XDC Network Improvement Proposals (XIPs) describe standards for the XDC platform, including core protocol specifications, client APIs, and contract standards.</p>
 
@@ -28,8 +27,8 @@ keywords: "responsive,jekyll,minimal template"
                   <li><strong>Living</strong> - A special status for XIPs that are designed to be continually updated and not reach a state of finality. This includes most notably XIP-1.</li>
                 </ul>
 
-                <h2>XIP Types</h2><BR>
-                <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p><BR>
+                <h2>XIP Types</h2>
+                <p>XIPs are separated into a number of types, and each has its own list of XIPs.</p>
 
                 <h3>Standard Track</h3>
                 <p>Describes any change that affects most or all XDC Network implementations, such as a change to the network protocol, a change in block or transaction validity rules, proposed application standards/conventions, or any change or addition that affects the interoperability of applications using XDC. Furthermore Standard XIPs can be broken down into the following categories.</p>
@@ -51,7 +50,6 @@ keywords: "responsive,jekyll,minimal template"
                 
                 <h3>Informational</h3>
                 <p>Describes a XDC Network design issue, or provides general guidelines or information to the XDC community, but does not propose a new feature. Informational XIPs do not necessarily represent XDC community consensus or a recommendation, so users and implementers are free to ignore Informational XIPs or follow their advice.</p>
-         </div>
       </div>
    </div>
 </section>
