--- a/pages/challenges.html
+++ b/pages/challenges.html
@@ -9,8 +9,8 @@ keywords: "responsive,jekyll,minimal template"
 <section class="changelog-area bg-color1">
    <div class="changelog-wrapper inner-spacing">
       <div class="container">
-         <div class="row">
-
+         <h1>Challenges</h1>
+            <p>Challenges are a way for developers to learn fundamental and advanced skills by actually coding. You’ll modify incomplete code snippets that perform key XDC Network tasks such as creating basic transactions, smart contracts, and much more. For each challenge you complete, you’ll earn an XRC-721 Badge that can be sent to the wallet of your choosing. Show it off to friends, brag about your status on Discord, or share your status as a Master XDC Network dev! 
          </div>
       </div>
    </div>
