--- a/pages/concepts.html
+++ b/pages/concepts.html
@@ -32,8 +32,22 @@ keywords: "xdc,documentation,concepts"
 <!-- End Feature Area -->
 
 <!-- Start All concepts Area -->
-<h1>ALL CONCEPTS</h1>
-<p>Additional concepts will be added by community members</p>
+<section class="changelog-area bg-color1">
+    <div class="changelog-wrapper inner-spacing">
+       <div class="container">
+             <h1>XDC Concepts</h1>
+                 <p>XDC Network Improvement Proposals (XIPs) describe standards for the XDC platform, including core protocol specifications, client APIs, and contract standards.</p>
+ 
+                 <h2>XDCPay</h2>
+                 <p>XDCPay concepts to be listed</p>
+ 
+                 <h2>NFTs</h2>
+                 <p>Ideas about NFTs listed here</p>
+ 
+                 <h2>New and Exciting concepts</h2>       
+       </div>
+    </div>
+ </section>
 <!-- End All concepts Area -->	
     {% include call_to_action.html %}
     {% include support_area.html %}
