doc pages testing

--- a/pages/tutorials.html
+++ b/pages/tutorials.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: tutorial_boxes
+title: Tutorials
 description: "XDC Network Developer Tutorials"
 keywords: "how to, tutorials, getting started"
 ---
