testing doc pages

--- a/pages/concepts.html
+++ b/pages/concepts.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Dev Concepts
+title: Concepts
 description: "Provoking conversation through developer concepts"
 keywords: "xdc,documentation,concepts"
 ---
@@ -36,15 +36,16 @@ keywords: "xdc,documentation,concepts"
     <div class="changelog-wrapper inner-spacing">
        <div class="container">
              <h1>XDC Concepts</h1>
-                 <p>XDC Network Improvement Proposals (XIPs) describe standards for the XDC platform, including core protocol specifications, client APIs, and contract standards.</p>
+            <p></p>
  
                  <h2>XDCPay</h2>
-                 <p>XDCPay concepts to be listed</p>
+                 <p>XDCPay concepts to be listed here</p>
  
                  <h2>NFTs</h2>
                  <p>Ideas about NFTs listed here</p>
  
-                 <h2>New and Exciting concepts</h2>       
+                 <h2>New and Exciting concepts</h2>
+                 <p>Additional ideas to be added</p>     
        </div>
     </div>
  </section>
